--- a/style.css
+++ b/style.css
@@ -254,6 +254,11 @@ MODAL
     text-align: center;
 }
 
+.modal--open .modal {
+    z-index: 60;
+    box-shadow: 0 20px 80px 0 rgb (0,0,0,0.55);
+    visibility: visible;
+}
 
 #contact__form {
     display: flex;
