--- a/style.css
+++ b/style.css
@@ -242,6 +242,7 @@ MODAL
     border-radius: 20px;
     overflow: hidden;
     background-color: rgba(0,0,0,0.7);
+    visibility: hidden;
 }
 
 .modal-content {
@@ -255,8 +256,6 @@ MODAL
 }
 
 .modal--open .modal {
-    z-index: 60;
-    box-shadow: 0 20px 80px 0 rgb (0,0,0,0.55);
     visibility: visible;
 }
 
