--- a/style.css
+++ b/style.css
@@ -346,6 +346,16 @@ FOOTER
     font-size: 20px;
 }
 
+.footer__plants {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:white;
+    color: black;
+    padding: 40px 0;
+    margin-top: 40px;
+    font-size: 20px;
+}
 
 
 /* 
