--- a/style.css
+++ b/style.css
@@ -654,6 +654,11 @@ MEDIA
         font-size: 24px;
         padding: 15px 0;
     }
+
+    .footer__plants {
+        font-size: 16px;
+        padding: 10px 0;
+    }
 }
 
 
